--- a/css/style.css
+++ b/css/style.css
@@ -340,7 +340,7 @@ a, a:visited, a:hover {
 
 .hero__image {
   position: relative;
-  background-image: url("/images/bg-intro-mobile.svg");
+  background-image: url("../images/bg-intro-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -368,7 +368,7 @@ a, a:visited, a:hover {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-image: url("/images/bg-intro-desktop.svg");
+    background-image: url("../images/bg-intro-desktop.svg");
     background-size: 93%;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -384,7 +384,7 @@ a, a:visited, a:hover {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: url("/images/image-mockups.png");
+  background-image: url("../images/image-mockups.png");
   background-size: 93%;
   background-repeat: no-repeat;
   background-position: center bottom;
@@ -400,7 +400,7 @@ a, a:visited, a:hover {
   .hero__image::after {
     height: 122%;
     width: 120%;
-    background-image: url("/images/image-mockups.png");
+    background-image: url("../images/image-mockups.png");
     background-size: 94%;
     background-position: center 150%;
     left: 22%;
