--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ a, a:visited, a:hover {
   bottom: 0;
   left: 0;
   background-image: linear-gradient(#2d314d, transparent);
+  z-index: 5;
 }
 
 .header nav {
@@ -258,6 +259,7 @@ a, a:visited, a:hover {
   background-color: white;
   padding-top: 1.065rem;
   padding-bottom: 1.065rem;
+  z-index: 10;
 }
 
 .header__logo img {
@@ -287,6 +289,7 @@ a, a:visited, a:hover {
   transform: translateX(-50%);
   padding: 1.625rem;
   margin-top: 1.5rem;
+  z-index: 5;
 }
 
 .header__menu a {
